--- a/view/np-app/index/sidenav.phtml
+++ b/view/np-app/index/sidenav.phtml
@@ -1,10 +1,34 @@
-        <nav id="sidebar-nav-holder" class="vertical-nav" gumby-pin="[data-target='icons']">
-            <ul id="sidebar-nav" gumby-fixed="1" gumby-top="top">
-                <li><a href="#/view1">view1</a></li>
-                <li><a href="#/view2">view2</a></li>
-                <li><a href="#c1" class="skip" gumby-offset="-100" gumby-update gumby-duration="600" gumby-goto="[data-target='c1']">c1</a></li>
-                <li><a href="#c2" class="skip" gumby-offset="-100" gumby-update gumby-duration="600" gumby-goto="[data-target='c2']">c2</a></li>
-                <li><a href="#c3" class="skip" gumby-offset="-100" gumby-update gumby-duration="600" gumby-goto="[data-target='c3']">c3</a></li>
-                <li><a href="#c4" class="skip" gumby-offset="-100" gumby-update gumby-duration="600" gumby-goto="[data-target='c4']">c4</a></li>
-            </ul>                    
-        </nav>
+<?php
+$manager = $this->npPaneManager();
+$callback = function ($pane, $params = array()) {
+    $pane->href = sprintf($pane->href, $params['href']);
+    $pane->attributes['gumby-goto'] = sprintf($pane->attributes['gumby-goto'], $params['target']);
+    $pane->label = sprintf($pane->label, $params['label']);
+    Flower\View\Pane\Factory\AnchorPaneFactory::parseBeginEnd($pane, $params);
+};
+$pane = $manager->get('gumby/skipLink');
+$array = array(
+    array(
+        'href' => '#c1',
+        'target' => 'c1',
+        'label' => 'c1-label',
+    ),
+    array(
+        'href' => '#c2',
+        'target' => 'c2',
+        'label' => 'c2-label',
+    ),
+);
+$collection = new Flower\View\Pane\Entity\ApplicatableCallbackCollection($callback, $array);
+$pane->setCollection($collection);
+echo '<nav id="sidebar-nav-holder" class="vertical-nav" gumby-pin="[data-target=\'icons\']">' . "\n";
+echo $manager->renderPane($pane);
+echo '</nav>' . "\n";
+?>
+
+<nav class="vertical-nav">
+    <ul>
+        <li><a href="#/view1">view1</a></li>
+        <li><a href="#/view2">view2</a></li>
+    </ul>
+</nav>
