--- a/view/pages/widget/header.phtml
+++ b/view/pages/widget/header.phtml
@@ -1,1 +1,1 @@
-        <h1 class="pull-left"><a href="/"><img src="<?php echo $this->basePath() ?>/img/brandIMG.gif" alt=""></a></h1>
+        <h2 class="pull-left"><a href="/">各ページのヘッダなどをページ属性によって変更するなど</a></h2>
