separate footer contents

--- a/view/pages/widget/footer.phtml
+++ b/view/pages/widget/footer.phtml
@@ -1,1 +1,5 @@
-        <h6>Powerd by ZendFramework 2, AngularJS,Gumbyframework</h6>
+<div class="centered eight columns text-center">
+    <p class="title"><?php echo $this->escapeHtml($siteData['title']); ?></p>
+    <p class="powerd-by"><?php echo $this->escapeHtml($siteData['powerdBy']); ?></p>
+    <p class="copyright"><?php echo $this->escapeHtml($siteData['copyright']); ?></p>
+</div>
