Fix typo powered

--- a/view/pages/widget/footer.phtml
+++ b/view/pages/widget/footer.phtml
@@ -1,5 +1,5 @@
 <div class="centered eight columns text-center">
     <p class="title"><?php echo $this->escapeHtml($siteData['title']); ?></p>
-    <p class="powerd-by"><?php echo $this->escapeHtml($siteData['powerdBy']); ?></p>
+    <p class="powered-by"><?php echo $this->escapeHtml($siteData['poweredBy']); ?></p>
     <p class="copyright"><?php echo $this->escapeHtml($siteData['copyright']); ?></p>
 </div>
